# rapvis

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  VERSIONING.md
.github/workflows/: ci.yml  deploy-pages.yml
Rapvis/: .gitignore  LICENSE  README.md  build.spec  pyproject.toml  requirements.txt  setup.iss
Rapvis/src/: app.py  config.py  config_manager.py  controller.py  data_processing.py  model.py  report_generator.py  view.py  visualization.py
Rapvis/tests/: test_basic.py
docs/: ARCHITECTURE.md
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/src/: App.test.tsx  App.tsx  index.css  types.ts
web/src/components/: PeriodChart.test.tsx  PeriodChart.tsx  periodChartLabels.ts
web/src/lib/: demand.test.ts  demand.ts  storage.ts
web/src/test/: setup.ts
