[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Rapvis"
version = "0.2.0"
description = "Efterfrågeanalys verktyg"
readme = "README.md"
authors = [
  { name = "Author Name", email = "author@example.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.0.0",
    "numpy>=1.18.0",
    "matplotlib>=3.1.0",
]
requires-python = ">=3.7"

[project.scripts]
rapvis = "app:main"

[tool.setuptools.packages.find]
where = ["src"]
